no qc pass: unnamed
no qc pass: p4lang: etherip server over ipv4
no qc pass: p4lang: etherip over bundle
no qc pass: unnamed
no qc pass: p4lang: l2vpn over tmux mpls
no qc pass: p4lang: tmux mpls push
no qc pass: p4lang: mldp core over tmux
no qc pass: unnamed
no qc pass: unnamed
no qc pass: unnamed
qc pass: p4lang: sdwan over ipv4 with gtp
qc pass: p4lang: sdwan over ipv6 with gtp
qc pass: p4lang: tmux routing over ipv4
qc pass: p4lang: tmux routing over ipv6
qc pass: p4lang: tmux routing over ipv4 loopback
qc pass: p4lang: tmux routing over ipv6 loopback
qc pass: p4lang: tmux routing over vlan
qc pass: p4lang: tmux routing over bundle
qc pass: p4lang: tmux routing over bundle vlan
qc pass: p4lang: tmux routing over hairpin
qc pass: p4lang: tmux routing over bridge
qc pass: p4lang: tmux routing over vlan bridge
qc pass: p4lang: tmux mpls over ipv4
qc pass: p4lang: tmux mpls over ipv6
qc pass: p4lang: tmux mpls over ipv6 loopback
qc pass: p4lang: tmux mpls over hairpin
qc pass: p4lang: tmux mpls over bridge
qc pass: p4lang: tmux mpls pop
qc pass: p4lang: sdwan over ipv4 with tmux
qc pass: p4lang: etherip over ipv6
qc pass: p4lang: gre local connect
qc pass: p4lang: polka over backplane
qc pass: p4lang: nsh over backplane
qc pass: p4lang: qinq routing
qc pass: p4lang: qinq vpls/ldp with bgp
qc pass: p4lang: qinq eompls
qc pass: p4lang: qinq pppoe routing
qc pass: p4lang: qinq pppoe mpls
qc pass: p4lang: hairpin qinq eompls
qc pass: p4lang: gre routing over qinq
qc pass: p4lang: multicast bundle qinq routing
qc pass: p4lang: mldp qinq core
qc pass: p4lang: mldp qinq egress edge
qc pass: p4lang: bier qinq core
qc pass: p4lang: qinq polka
qc pass: p4lang: l2vpn over bundle qinq mpls
qc pass: p4lang: l3vpn over bundle qinq mpls
qc pass: p4lang: qinq bridge tcpmss
---------------------------------- 2024-10-07 07:43:35 24.10.7
no todo: test hwredetect that uses some external file and a p4lang process to overcome the eth0-->eno1-->eth0 random changes, by mac and friends