@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.10.20-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-10-20 06:49:52, took 00:12:00, with 50 workers, on 617 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-10-20 07:32:41, took 00:10:36, with 50 workers, on 617 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
